[project]
name = "agentic_ai"
version = "0.1.0"
description = "Agentic AI playground"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.15.0",
    "openai-agents>=0.7.0",
    "pydantic>=2.12.5",
    "torch>=2.10.0",
    "transformers>=5.0.0",
]
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]
